Fix Tuple.encodeFeature, fix PgWriter.prepareWrite, rename TagsMember to TagMapMember, minor changes ...
Signed-off-by: Alexander Lowey-Weber <alexander.weber@here.com>